--- a/infrastructure/driven-adapters/r2dbc-postgresql/build.gradle
+++ b/infrastructure/driven-adapters/r2dbc-postgresql/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation 'jakarta.persistence:jakarta.persistence-api'
     implementation 'org.mariadb:r2dbc-mariadb:1.1.3'
     implementation 'org.reactivecommons.utils:object-mapper-api:0.1.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
     testImplementation 'org.reactivecommons.utils:object-mapper:0.1.0'
 
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
